--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-primer
-name                     : &name "草莓大魔王 EricJJ"
+name                     : "OneDay App"
 description              : &description "OneDay App Mac 每日时间规划提醒工具"
 google_site_verification : smCJSCOh0BvHZo9YtYLWu6Fd_l3H65ZssxYr_sn0iUs
 show_downloads: true
